gcc/testsuite/rust/rustc/ui/issues/issue-14092.rs
fn fn1(0: Box) {}
// { dg-error ".E0107." "" { target *-*-* } .-1 }

fn main() {}

